src/component/markdown_renderer/snapshots/envision__component__markdown_renderer__tests__view_chrome_owned_no_outer_border.snap
---
source: src/component/markdown_renderer/tests.rs
expression: terminal.backend().to_string()
---
# Hello                                 
                                        
Some body text.
