src/component/markdown_renderer/snapshots/envision__component__markdown_renderer__tests__view_with_code_block.snap
---
source: src/component/markdown_renderer/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
││   let x = 42;                       │
││   println!("{}", x);                │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
