src/component/markdown_renderer/snapshots/envision__component__markdown_renderer__tests__view_with_heading.snap
---
source: src/component/markdown_renderer/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│# Hello World                         │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
