src/component/markdown_renderer/snapshots/envision__component__markdown_renderer__tests__view_with_paragraph.snap
---
source: src/component/markdown_renderer/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│Hello, world! This is a test. Line    │
│three.                                │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
