src/component/markdown_renderer/snapshots/envision__component__markdown_renderer__tests__view_with_title.snap
---
source: src/component/markdown_renderer/tests.rs
expression: terminal.backend().to_string()
---
┌Document──────────────────────────────┐
│# Hello                               │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
